@@ -1,6 +1,11 @@
 2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/ralloc2.cc:
+	  Type fixes.
+
+2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc:
 	  Preparations for the use of a better cost function and handling a, hl and iy in the new allocator.
 
 2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
